@@ -1,3 +1,7 @@
+2016-07-02  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
+
+	* fixed some bugs related to server replies
+
 2016-06-11  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
 
 	* improved Cipher Suites evaluation
